--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Slack-like instant messaging server and client software",
   "main": "index.js",
   "dependencies": {
-    "moment": "^2.10.6",
+    "express": "^4.13.3",
     "socket.io": "^1.4.4"
   },
   "devDependencies": {},
