--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.13.3",
+    "jade": "^1.11.0",
     "socket.io": "^1.4.4"
   },
   "devDependencies": {},
