--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "Slack-like instant messaging server and client software",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.14.2",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
+    "express-session": "^1.13.0",
     "jade": "^1.11.0",
+    "mongoose": "^4.3.5",
+    "morgan": "^1.6.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^3.1.0",
+    "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.4"
   },
   "devDependencies": {},
