--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jade": "^1.11.0",
     "mongoose": "^4.3.5",
     "morgan": "^1.6.1",
+    "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0",
     "serve-favicon": "^2.3.0",
