--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "Slack-like instant messaging server and client software",
   "main": "index.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "jade": "^1.11.0",
+    "method-override": "^2.3.5",
     "mongoose": "^4.3.5",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^3.1.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.4"
   },
