--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "passport-local": "^1.0.0",
     "socket.io": "^1.4.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3"
+  },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha tests/"
   },
