--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ws": "^1.1.1"
   },
   "devDependencies": {
+    "bower": "^1.8.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "eslint": "^3.12.2",
